setup mongoDb, mLab, and initial routes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@uirouter/angularjs": "^1.0.25",
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
-    "html5-boilerplate": "0.0.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "html5-boilerplate": "0.0.1",
+    "mongoose": "^5.9.6",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
@@ -29,6 +33,7 @@
     "copy-libs": "cpx \"node_modules/{angular,angular-*,html5-boilerplate/dist}/**/*\" app/lib -C",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
+    "server": "nodemon server/app.js",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "npm test -- --single-run",
